[workspace]
members = [
	"./examples/*",
	"./axum-distributed-routing-macros",
]

[package]
name = "axum-distributed-routing"
version = "0.1.1"
edition = "2024"
description = """
Distributed routing for axum
"""
authors = ["Killian Bellouard <killianbellouard@gmail.com>"]
license = "MIT"
keywords = ["axum", "routing"]
repository = "https://github.com/0Killian/axum-distributed-routing.git"
homepage = "https://github.com/0Killian/axum-distributed-routing.git"
readme = "README.md"

[dependencies]
axum = "0.8.1"
inventory = "0.3.20"
axum-distributed-routing-macros = { path = "./axum-distributed-routing-macros", version = "0.1.0" }

