[package]
name = "axum-distributed-routing-macros"
version = "0.1.1"
edition = "2024"
description = """
Distributed routing macros for axum
"""
authors = ["Killian Bellouard <killianbellouard@gmail.com>"]
license = "MIT"
keywords = ["axum", "routing"]
repository = "https://github.com/0Killian/axum-distributed-routing.git"
homepage = "https://github.com/0Killian/axum-distributed-routing.git"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
stringcase = "0.4.0"
