[package]
name = "hello_world"
version = "0.1.3"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
linkme = "0.3.32"
axum-distributed-routing = { path = "../../" }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
